// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterTodoList by initialState 1`] = `Array []`;

exports[`filterTodoList todoList 1件以上, filter:all 1`] = `
Array [
  Object {
    "id": "id1",
    "label": "id1-label",
    "status": "active",
  },
  Object {
    "id": "id2",
    "label": "id2-label",
    "status": "completed",
  },
]
`;

exports[`filterTodoList todoList 1件以上, filter:completed 1`] = `
Array [
  Object {
    "id": "id2",
    "label": "id2-label",
    "status": "completed",
  },
  Object {
    "id": "id3",
    "label": "id3-label",
    "status": "completed",
  },
  Object {
    "id": "id4",
    "label": "id4-label",
    "status": "completed",
  },
]
`;
